--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         }
     },
     "require": {
+        "php" : "~7.4.0",
         "pecee/simple-router": "^4.3.2",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "ext-pdo_sqlite": "*",
+        "ext-mbstring": "*"
     },
     "autoload": {
         "psr-4": {
