--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require": {
         "php" : "~7.4.0",
-        "pecee/simple-router": "^4.3.2",
+        "pecee/simple-router": "~4.3.2.0",
         "ext-pdo": "*",
         "ext-pdo_sqlite": "*",
         "ext-mbstring": "*"
