Настройки ЧПУ для Heroku

--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,5 +1,11 @@
 location / {
-    try_files $uri $uri/ /index.php?$query_string;
+    # try to serve file directly, fallback to rewrite
+    try_files $uri @rewriteapp;
+}
+
+location @rewriteapp {
+    # rewrite all to index.php
+    rewrite ^(.*)$ /index.php/$1 last;
 }
 
 location ~ ^/index\.php(/|$) {
